# robia

./: .gitignore  .gitmodules  LICENSE  README.md
dye-1.07/: CMakeLists.txt  dye.pc.cmake
dye-1.07/doc/: Doxyfile.in
dye-1.07/examples/: CMakeLists.txt  example-001-conversion.cc  example-002-colortest.cc
dye-1.07/src/: CMakeLists.txt  dye.h
ros/catkin_ws/: .gitignore
ros/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ros/catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
ros/catkin_ws/devel/include/ardrone_autonomy/: CamSelect.h  CamSelectRequest.h  CamSelectResponse.h  FlightAnim.h  FlightAnimRequest.h  FlightAnimResponse.h  LedAnim.h  LedAnimRequest.h  LedAnimResponse.h  Navdata.h  RecordEnable.h  RecordEnableRequest.h  RecordEnableResponse.h  matrix33.h  navdata_adc_data_frame.h  navdata_altitude.h  navdata_demo.h  navdata_euler_angles.h  navdata_games.h  navdata_gyros_offsets.h  navdata_hdvideo_stream.h  navdata_kalman_pressure.h  navdata_magneto.h  navdata_phys_measures.h  navdata_pressure_raw.h  navdata_pwm.h  navdata_raw_measures.h  navdata_rc_references.h  navdata_references.h  navdata_time.h  navdata_trackers_send.h  navdata_trims.h  navdata_video_stream.h  navdata_vision.h  navdata_vision_detect.h  navdata_vision_of.h  navdata_vision_perf.h  navdata_vision_raw.h  navdata_watchdog.h  navdata_wifi.h  (+4 more)
ros/catkin_ws/devel/lib/pkgconfig/: ardrone_autonomy.pc  robia.pc
ros/catkin_ws/devel/lib/python2.7/dist-packages/ardrone_autonomy/msg/: _Navdata.py  __init__.py  _navdata_adc_data_frame.py  _navdata_altitude.py  _navdata_demo.py  _navdata_euler_angles.py  _navdata_games.py  _navdata_gyros_offsets.py  _navdata_hdvideo_stream.py  _navdata_kalman_pressure.py  _navdata_magneto.py  _navdata_phys_measures.py  _navdata_pressure_raw.py  _navdata_pwm.py  _navdata_raw_measures.py  _navdata_rc_references.py  _navdata_references.py  _navdata_time.py  _navdata_trackers_send.py  _navdata_trims.py  _navdata_video_stream.py  _navdata_vision.py  _navdata_vision_detect.py  _navdata_vision_of.py  _navdata_vision_perf.py  _navdata_vision_raw.py  _navdata_watchdog.py  _navdata_wifi.py  _navdata_wind_speed.py  _navdata_zimmu_3000.py
ros/catkin_ws/devel/lib/robia/: keyboard_cmd
ros/catkin_ws/devel/share/ardrone_autonomy/cmake/: ardrone_autonomy-msg-extras.cmake  ardrone_autonomy-msg-paths.cmake  ardrone_autonomyConfig.cmake
ros/catkin_ws/devel/share/common-lisp/ros/ardrone_autonomy/msg/: Navdata.lisp  _package.lisp  ardrone_autonomy-msg.asd  navdata_adc_data_frame.lisp  navdata_altitude.lisp  navdata_demo.lisp  navdata_euler_angles.lisp  navdata_games.lisp  navdata_gyros_offsets.lisp  navdata_hdvideo_stream.lisp  navdata_kalman_pressure.lisp  navdata_magneto.lisp  navdata_phys_measures.lisp  navdata_pressure_raw.lisp  navdata_pwm.lisp  navdata_raw_measures.lisp  navdata_rc_references.lisp  navdata_references.lisp  navdata_time.lisp  navdata_trackers_send.lisp  navdata_trims.lisp  navdata_video_stream.lisp  navdata_vision.lisp  navdata_vision_detect.lisp  navdata_vision_of.lisp  navdata_vision_perf.lisp  navdata_vision_raw.lisp  navdata_watchdog.lisp  navdata_wifi.lisp  navdata_wind_speed.lisp  navdata_zimmu_3000.lisp
ros/catkin_ws/devel/share/common-lisp/ros/ardrone_autonomy/srv/: _package.lisp  ardrone_autonomy-srv.asd
ros/catkin_ws/devel/share/robia/cmake/: robiaConfig.cmake
ros/catkin_ws/src/: keyboard_cmd.cxx
ros/catkin_ws/src/robia/: CMakeLists.txt  package.xml  ros.launch  tuto-gng.cc
ros/catkin_ws/src/robia/msg/: points_tuple.msg
ros/catkin_ws/src/robia/src/: AI.cpp  AI.h  ARDrone.cpp  ARDrone.h  camera.cpp  camera.h  colorFilterNode.cpp  control.cpp  control.h  dye.h  dyeFilter.cpp  dyeFilter.h  filter.h  keyboard_cmd.cpp
tracker/: CMakeLists.txt
tracker/src/: CMakeCache.txt  CMakeLists.txt  Makefile  backgroundFilter.cc  backgroundFilter.h  bgFilter.h  cmake_install.cmake  dye.h  dyeFilter.cc  dyeFilter.h  filter.h  github  github.pub  main.cc  tracker
vq2-1.23/: CMakeLists.txt  vq2.pc.cmake
vq2-1.23/examples/: CMakeLists.txt  example-002-001-graph.cc  example-002-002-graph.cc  example-002-004-connected-components.cc  example-004-001-kmeans.cc  example-004-002-som.cc  example-004-003-gngt.cc  example-004-004-gngt.cc  example-005-001-speed-som.cc  example-005-002-speed-gngt.cc  example-test-001-lists.cc
vq2-1.23/src/: CMakeLists.txt  vq2ByDefault.h  vq2Concept.h  vq2Fig.h  vq2GNGT.h  vq2Graph.h  vq2Memory.h  vq2Proba.h  vq2SOM.h  vq2Speed.h  vq2Topology.h  vq2Unit.h
vq2-1.33/: CMakeLists.txt
vq2-1.33/examples/: CMakeLists.txt  example-002-002-graph.cc  example-002-003-distance.cc  example-002-005-xfig.cc  example-003-001-closest.cc  example-004-000-density.cc  example-004-001-kmeans.cc  example-004-002-som.cc  example-004-003-gngt.cc  example-004-004-gngt.cc  example-005-001-speed-som.cc  example-005-002-speed-gngt.cc  example-test-002-lists.cc
vq2-1.33/src/: CMakeLists.txt  vq2.h  vq2Closest.h  vq2Concept.h  vq2Functors.h  vq2GNGT.h  vq2KMeans.h  vq2Speed.h  vq2Time.h  vq2Topology.h  vq2Unit.h
